[package]
name = "kamo"
version = "0.1.0"
edition = "2024"

authors = ["robbinhan"]
description = "WezTerm file explorer with syntax highlighting and image preview support"
license = "MIT"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ratatui = "0.30"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
unicode-width = "0.2"
syntect = { version = "5", default-features = true, features = ["default-fancy"] }
image = { version = "0.25", default-features = true, features = ["png", "jpeg", "gif", "bmp", "webp"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
